[project]
name = "rfnry-examples"
version = "0.0.0"
description = "rfnry example agents across three maturity tiers"
requires-python = ">=3.11"

dependencies = [
    "rfnry",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
anthropic = ["rfnry[anthropic]"]
openai = ["rfnry[openai]"]

[tool.uv.sources]
rfnry = { path = "../../packages/python", editable = true }
