[project]
name = "rfnry-example-factory-assistant"
version = "0.0.1"
description = "Factory-assistant — rfnry agent + rfnry-knowledge over machine manuals, mechanical drawings, and meeting transcripts"
requires-python = ">=3.12"
dependencies = [
    "rfnry",
    "rfnry-knowledge[graph]",
    "anthropic>=0.40",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.20",
    "openai>=2.32.0",
    "pydantic>=2.13.2",
]

[tool.uv.sources]
rfnry = { path = "../../../../rfnry/packages/python", editable = true }
rfnry-knowledge = { path = "../../../../knowledge/packages/python", editable = true }

[project.optional-dependencies]
dev = [
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.poe.tasks]
dev = "python -m src.main"
start = "python -m src.main"
format = "ruff format ."
"format:imports" = "ruff check --select I --fix ."
check = "ruff check ."
"check:fix" = "ruff check --fix ."
typecheck = "mypy src"
