[project]
name = "rfnry-example-marketplace-assistant"
version = "0.0.1"
description = "Marketplace-assistant — electronics retailer sales/marketing aide (rfnry + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "rfnry",
    "anthropic>=0.40",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
]

[tool.uv.sources]
rfnry = { path = "../../../../../rfnry/packages/python", editable = true }

[project.optional-dependencies]
dev = [
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.poe.tasks]
dev = "python -m src.server"
start = "python -m src.server"
format = "ruff format ."
"format:imports" = "ruff check --select I --fix ."
check = "ruff check ."
"check:fix" = "ruff check --fix ."
typecheck = "mypy src"
