[project]
name = "rfnry-voice-example-companion-assistant"
version = "0.0.1"
description = "Samantha-style voice companion (rfnry-voice + WebRTC + OpenAI Realtime)"
requires-python = ">=3.11"
dependencies = [
    "rfnry-voice-server[openai,webrtc]>=0.3.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.2",
    "openai>=1.50.0",
]

[tool.uv.sources]
rfnry-voice-server = { path = "../../../../../voice/packages/server-python", editable = true }

[project.optional-dependencies]
dev = [
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "ruff>=0.15.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
disable_error_code = ["untyped-decorator", "unused-ignore"]

[[tool.mypy.overrides]]
module = [
    "rfnry_voice_protocol", "rfnry_voice_protocol.*",
    "rfnry_voice_server", "rfnry_voice_server.*",
    "openai", "openai.*",
    "aiortc", "aiortc.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.poe.tasks]
dev = "uvicorn src.main:app --host 0.0.0.0 --port 8401 --reload"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8401"
format = "ruff format ."
check = "ruff check ."
typecheck = "mypy src"
test = "pytest"
